--- a/index.html
+++ b/index.html
@@ -34,20 +34,22 @@
     <section id="features" class="features">
         <div class="container">
             <h2>Nasze Funkcje</h2>
-            <div class="feature">
-                <img src="images/feature1.png" alt="Funkcja 1">
-                <h3>Śledzenie postępów</h3>
-                <p>Monitoruj swoje wyniki i postępy w treningach.</p>
-            </div>
-            <div class="feature">
-                <img src="images/feature2.png" alt="Funkcja 2">
-                <h3>Personalizowane plany treningowe</h3>
-                <p>Dostosowane do Twoich potrzeb i celów.</p>
-            </div>
-            <div class="feature">
-                <img src="images/feature3.png" alt="Funkcja 3">
-                <h3>Analiza danych</h3>
-                <p>Uzyskaj szczegółowe raporty i analizy swoich wyników.</p>
+            <div class="feature-grid">
+                <div class="feature">
+                    <img src="images/feature1.png" alt="Funkcja 1">
+                    <h3>Śledzenie postępów</h3>
+                    <p>Monitoruj swoje wyniki i postępy w treningach.</p>
+                </div>
+                <div class="feature">
+                    <img src="images/feature2.png" alt="Funkcja 2">
+                    <h3>Personalizowane plany treningowe</h3>
+                    <p>Dostosowane do Twoich potrzeb i celów.</p>
+                </div>
+                <div class="feature">
+                    <img src="images/feature3.png" alt="Funkcja 3">
+                    <h3>Analiza danych</h3>
+                    <p>Uzyskaj szczegółowe raporty i analizy swoich wyników.</p>
+                </div>
             </div>
         </div>
     </section>
