--- a/index.html
+++ b/index.html
@@ -23,34 +23,30 @@
         </div>
     </header>
 
-    <section class="hero" style="background-image: url('images/hero-bg.jpg');">
+    <section class="hero">
         <div class="hero-content">
             <h1>Witaj w GymStats Pro</h1>
-            <p>Twoje dane treningowe w jednym miejscu!</p>
-            <a href="#features" class="btn">Zobacz więcej</a>
+            <p>Śledź swoje postępy i osiągaj cele fitness!</p>
+            <a href="#features" class="btn">Zacznij teraz</a>
         </div>
     </section>
 
-    <section id="features" class="features">
-        <div class="container">
-            <h2>Nasze Funkcje</h2>
-            <div class="feature-grid">
-                <div class="feature">
-                    <img src="images/feature1.png" alt="Funkcja 1">
-                    <h3>Śledzenie postępów</h3>
-                    <p>Monitoruj swoje wyniki i postępy w treningach.</p>
-                </div>
-                <div class="feature">
-                    <img src="images/feature2.png" alt="Funkcja 2">
-                    <h3>Personalizowane plany treningowe</h3>
-                    <p>Dostosowane do Twoich potrzeb i celów.</p>
-                </div>
-                <div class="feature">
-                    <img src="images/feature3.png" alt="Funkcja 3">
-                    <h3>Analiza danych</h3>
-                    <p>Uzyskaj szczegółowe raporty i analizy swoich wyników.</p>
-                </div>
-            </div>
+    <section class="features">
+        <h2>Nasze funkcje</h2>
+        <div class="feature">
+            <i class="fas fa-chart-line"></i>
+            <h3>Śledzenie postępów</h3>
+            <p>Monitoruj swoje osiągnięcia w czasie rzeczywistym.</p>
+        </div>
+        <div class="feature">
+            <i class="fas fa-users"></i>
+            <h3>Społeczność</h3>
+            <p>Dołącz do naszej społeczności i dziel się swoimi wynikami.</p>
+        </div>
+        <div class="feature">
+            <i class="fas fa-cogs"></i>
+            <h3>Personalizacja</h3>
+            <p>Dostosuj program do swoich indywidualnych potrzeb.</p>
         </div>
     </section>
 
