--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <img src="images/logo.png" alt="GymStats Pro Logo" class="logo">
+            <h1 class="logo">GymStats Pro</h1> <!-- Zamiast obrazka, użyj tekstu jako logo -->
             <nav>
                 <ul>
                     <li><a href="#features">Funkcje</a></li>
@@ -61,6 +62,11 @@
         <div class="container">
             <p>Skontaktuj się z nami: <a href="mailto:info@gymstatspro.com">info@gymstatspro.com</a></p>
             <p>&copy; 2023 GymStats Pro. Wszelkie prawa zastrzeżone.</p>
+            <div class="social-media">
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+                <a href="#">Twitter</a>
+            </div>
         </div>
     </footer>
 
