--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">GymStats Pro</h1> <!-- Zamiast obrazka, użyj tekstu jako logo -->
+            <h1 class="logo">GymStats Pro</h1>
             <nav>
                 <ul>
                     <li><a href="#features">Funkcje</a></li>
                     <li><a href="#about">O nas</a></li>
+                    <li><a href="#testimonials">Opinie</a></li>
+                    <li><a href="#faq">FAQ</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </nav>
@@ -32,7 +34,7 @@
         </div>
     </section>
 
-    <section class="features">
+    <section class="features" id="features">
         <h2>Nasze funkcje</h2>
         <div class="feature">
             <i class="fas fa-chart-line"></i>
@@ -49,27 +51,77 @@
             <h3>Personalizacja</h3>
             <p>Dostosuj program do swoich indywidualnych potrzeb.</p>
         </div>
+        <div class="feature">
+            <i class="fas fa-mobile-alt"></i>
+            <h3>Mobilność</h3>
+            <p>Używaj aplikacji na swoim telefonie, gdziekolwiek jesteś!</p>
+        </div>
+        <div class="feature">
+            <i class="fas fa-calendar-check"></i>
+            <h3>Planowanie treningów</h3>
+            <p>Twórz harmonogramy treningów i trzymaj się ich!</p>
+        </div>
+        <div class="feature">
+            <i class="fas fa-chart-pie"></i>
+            <h3>Analiza wyników</h3>
+            <p>Uzyskaj szczegółowe statystyki swoich postępów.</p>
+        </div>
     </section>
 
     <section id="about" class="about">
         <div class="container">
             <h2>O nas</h2>
-            <p>GymStats Pro to aplikacja stworzona z myślą o pasjonatach fitnessu, którzy chcą efektywnie śledzić swoje postępy i osiągać lepsze wyniki.</p>
+            <p>GymStats Pro to aplikacja stworzona z myślą o pasjonatach fitnessu, którzy chcą efektywnie śledzić swoje postępy i osiągać lepsze wyniki. Nasza aplikacja jest całkowicie darmowa, co oznacza, że możesz korzystać z wszystkich funkcji bez żadnych opłat!</p>
         </div>
     </section>
 
-    <footer id="contact">
+    <section id="testimonials" class="testimonials">
+        <h2>Opinie użytkowników</h2>
+        <div class="testimonial">
+            <p>"GymStats Pro pomogło mi w osiągnięciu moich celów fitness! Świetna aplikacja!"</p>
+            <p>- Anna K.</p>
+        </div>
+        <div class="testimonial">
+            <p>"Nie wyobrażam sobie treningu bez tej aplikacji. Świetne funkcje!"</p>
+            <p>- Piotr W.</p>
+        </div>
+        <div class="testimonial">
+            <p>"Dzięki GymStats Pro mogę śledzić swoje postępy i motywować się!"</p>
+            <p>- Marta L.</p>
+        </div>
+    </section>
+
+    <section id="faq" class="faq">
+        <h2>Najczęściej zadawane pytania (FAQ)</h2>
+        <div class="faq-item">
+            <h3>Jak mogę pobrać aplikację?</h3>
+            <p>Aplikację można pobrać bezpośrednio z naszej strony internetowej lub z popularnych sklepów z aplikacjami.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Czy aplikacja jest naprawdę darmowa?</h3>
+            <p>Tak, GymStats Pro jest całkowicie darmowa i oferuje wszystkie funkcje bez żadnych ukrytych opłat.</p>
+        </div>
+        <div class="faq-item">
+            <h3>Jak mogę skontaktować się z zespołem wsparcia?</h3>
+            <p>Możesz skontaktować się z nami za pomocą formularza kontaktowego na stronie lub wysyłając e-mail na nasz adres wsparcia.</p>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Kontakt</h2>
+        <p>Masz pytania? Chcesz się z nami skontaktować? Wypełnij formularz kontaktowy, a my odpowiemy najszybciej jak to możliwe!</p>
+        <form action="#" method="post">
+            <input type="text" name="name" placeholder="Twoje imię" required>
+            <input type="email" name="email" placeholder="Twój e-mail" required>
+            <textarea name="message" placeholder="Twoja wiadomość" required></textarea>
+            <button type="submit" class="btn">Wyślij</button>
+        </form>
+    </section>
+
+    <footer>
         <div class="container">
-            <p>Skontaktuj się z nami: <a href="mailto:info@gymstatspro.com">info@gymstatspro.com</a></p>
             <p>&copy; 2023 GymStats Pro. Wszelkie prawa zastrzeżone.</p>
-            <div class="social-media">
-                <a href="#">Facebook</a>
-                <a href="#">Instagram</a>
-                <a href="#">Twitter</a>
-            </div>
         </div>
     </footer>
-
-    <script src="js/scripts.js"></script>
 </body>
 </html>
