--- a/index.html
+++ b/index.html
@@ -36,32 +36,32 @@
 
     <section class="features" id="features">
         <h2>Nasze funkcje</h2>
-        <div class="feature">
+        <div class="feature fade-in">
             <i class="fas fa-chart-line"></i>
             <h3>Śledzenie postępów</h3>
             <p>Monitoruj swoje osiągnięcia w czasie rzeczywistym.</p>
         </div>
-        <div class="feature">
+        <div class="feature fade-in">
             <i class="fas fa-users"></i>
             <h3>Społeczność</h3>
             <p>Dołącz do naszej społeczności i dziel się swoimi wynikami.</p>
         </div>
-        <div class="feature">
+        <div class="feature fade-in">
             <i class="fas fa-cogs"></i>
             <h3>Personalizacja</h3>
             <p>Dostosuj program do swoich indywidualnych potrzeb.</p>
         </div>
-        <div class="feature">
+        <div class="feature fade-in">
             <i class="fas fa-mobile-alt"></i>
             <h3>Mobilność</h3>
             <p>Używaj aplikacji na swoim telefonie, gdziekolwiek jesteś!</p>
         </div>
-        <div class="feature">
+        <div class="feature fade-in">
             <i class="fas fa-calendar-check"></i>
             <h3>Planowanie treningów</h3>
             <p>Twórz harmonogramy treningów i trzymaj się ich!</p>
         </div>
-        <div class="feature">
+        <div class="feature fade-in">
             <i class="fas fa-chart-pie"></i>
             <h3>Analiza wyników</h3>
             <p>Uzyskaj szczegółowe statystyki swoich postępów.</p>
@@ -77,15 +77,15 @@
 
     <section id="testimonials" class="testimonials">
         <h2>Opinie użytkowników</h2>
-        <div class="testimonial">
+        <div class="testimonial slide-up">
             <p>"GymStats Pro pomogło mi w osiągnięciu moich celów fitness! Świetna aplikacja!"</p>
             <p>- Anna K.</p>
         </div>
-        <div class="testimonial">
+        <div class="testimonial slide-up">
             <p>"Nie wyobrażam sobie treningu bez tej aplikacji. Świetne funkcje!"</p>
             <p>- Piotr W.</p>
         </div>
-        <div class="testimonial">
+        <div class="testimonial slide-up">
             <p>"Dzięki GymStats Pro mogę śledzić swoje postępy i motywować się!"</p>
             <p>- Marta L.</p>
         </div>
@@ -117,7 +117,7 @@
             <button type="submit" class="btn">Wyślij</button>
         </form>
     </section>
-
+    <script src="js/scripts.js"></script>
     <footer>
         <div class="container">
             <p>&copy; 2023 GymStats Pro. Wszelkie prawa zastrzeżone.</p>
