--- a/index.html
+++ b/index.html
@@ -106,6 +106,30 @@
             <p>Możesz skontaktować się z nami za pomocą formularza kontaktowego na stronie lub wysyłając e-mail na nasz adres wsparcia.</p>
         </div>
     </section>
+                
+    <section id="tips" class="tips">
+        <h2>Porady dotyczące fitnessu</h2>
+        <div class="tip fade-in">
+            <h3>1. Ustal realistyczne cele</h3>
+            <p>Określ, co chcesz osiągnąć, i ustal realistyczne cele, które będą Cię motywować.</p>
+        </div>
+        <div class="tip fade-in">
+            <h3>2. Regularność to klucz</h3>
+            <p>Staraj się ćwiczyć regularnie, aby przyzwyczaić swoje ciało do aktywności fizycznej.</p>
+        </div>
+        <div class="tip fade-in">
+            <h3>3. Słuchaj swojego ciała</h3>
+            <p>Nie ignoruj sygnałów, które wysyła Ci ciało. Odpoczynek jest równie ważny jak trening.</p>
+        </div>
+        <div class="tip fade-in">
+            <h3>4. Zróżnicuj treningi</h3>
+            <p>Wprowadź różnorodność do swojego planu treningowego, aby uniknąć rutyny i zniechęcenia.</p>
+        </div>
+        <div class="tip fade-in">
+            <h3>5. Pij dużo wody</h3>
+            <p>Odpowiednie nawodnienie jest kluczowe dla wydajności i zdrowia.</p>
+        </div>
+    </section>
 
     <section id="contact" class="contact">
         <h2>Kontakt</h2>
